# telefetch

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
telefetch/: cli.py  downloader.py
telefetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
